{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 384,
  "lineage": "8d8045b7-aa0d-2a76-e1a1-e00249806a82",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "db_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-010131d8b49adf6a5",
            "association_id": "eipassoc-08733a8bd48efc8ca",
            "domain": "vpc",
            "id": "eipalloc-010131d8b49adf6a5",
            "instance": "i-0dd345e15b4919e0d",
            "network_border_group": "us-east-2",
            "network_interface": "eni-08eaced05d28435bd",
            "private_dns": "ip-192-168-0-13.us-east-2.compute.internal",
            "private_ip": "192.168.0.13",
            "public_dns": "ec2-3-129-191-209.us-east-2.compute.amazonaws.com",
            "public_ip": "3.129.191.209",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "DB PIP"
            },
            "tags_all": {
              "Name": "DB PIP"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.app_db",
            "aws_network_interface.db_nic",
            "aws_security_group.ssh_sg",
            "aws_security_group.subnet_sg",
            "aws_subnet.app_subnet",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "lb_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fde4bc8445e9d7a7",
            "association_id": "eipassoc-010d5349e2c8ae8a3",
            "domain": "vpc",
            "id": "eipalloc-0fde4bc8445e9d7a7",
            "instance": "i-00213ad9dca971cc0",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0650b51db9f787eb5",
            "private_dns": "ip-192-168-0-11.us-east-2.compute.internal",
            "private_ip": "192.168.0.11",
            "public_dns": "ec2-3-13-1-226.us-east-2.compute.amazonaws.com",
            "public_ip": "3.13.1.226",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "LB PIP"
            },
            "tags_all": {
              "Name": "LB PIP"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.app_lb",
            "aws_network_interface.lb_nic",
            "aws_security_group.http_sg",
            "aws_security_group.ssh_sg",
            "aws_security_group.subnet_sg",
            "aws_subnet.app_subnet",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "web_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cf82716a55e05a62",
            "association_id": "eipassoc-0ae1aee74be42ce29",
            "domain": "vpc",
            "id": "eipalloc-0cf82716a55e05a62",
            "instance": "i-0db9da40394fe1d4d",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0a2a0a9f3b9165ada",
            "private_dns": "ip-192-168-0-12.us-east-2.compute.internal",
            "private_ip": "192.168.0.12",
            "public_dns": "ec2-3-21-200-89.us-east-2.compute.amazonaws.com",
            "public_ip": "3.21.200.89",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "WEB PIP"
            },
            "tags_all": {
              "Name": "WEB PIP"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.app_web",
            "aws_network_interface.web_nic",
            "aws_security_group.ssh_sg",
            "aws_security_group.subnet_sg",
            "aws_subnet.app_subnet",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0984b842ee24d45f1",
            "arn": "arn:aws:ec2:us-east-2:929679443283:instance/i-0dd345e15b4919e0d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dd345e15b4919e0d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "app_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-08eaced05d28435bd"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08eaced05d28435bd",
            "private_dns": "ip-192-168-0-13.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.0.13",
            "public_ip": "3.129.191.209",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d934bba07df5827f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0229d0a16e98a2a49",
            "tags": {
              "Name": "DB"
            },
            "tags_all": {
              "Name": "DB"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0282612130a7f722b",
              "sg-067d251635c7f8c23"
            ]
          },
          "dependencies": [
            "aws_network_interface.db_nic",
            "aws_security_group.ssh_sg",
            "aws_security_group.subnet_sg",
            "aws_subnet.app_subnet",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0984b842ee24d45f1",
            "arn": "arn:aws:ec2:us-east-2:929679443283:instance/i-00213ad9dca971cc0",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00213ad9dca971cc0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "app_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0650b51db9f787eb5"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0650b51db9f787eb5",
            "private_dns": "ip-192-168-0-11.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.0.11",
            "public_ip": "3.13.1.226",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02b395bdf60248b5a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0229d0a16e98a2a49",
            "tags": {
              "Name": "LB"
            },
            "tags_all": {
              "Name": "LB"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0282612130a7f722b",
              "sg-0630f4ff6e8e89d93",
              "sg-067d251635c7f8c23"
            ]
          },
          "dependencies": [
            "aws_network_interface.lb_nic",
            "aws_security_group.http_sg",
            "aws_security_group.ssh_sg",
            "aws_security_group.subnet_sg",
            "aws_subnet.app_subnet",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0984b842ee24d45f1",
            "arn": "arn:aws:ec2:us-east-2:929679443283:instance/i-0db9da40394fe1d4d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0db9da40394fe1d4d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "app_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0a2a0a9f3b9165ada"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a2a0a9f3b9165ada",
            "private_dns": "ip-192-168-0-12.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.0.12",
            "public_ip": "3.21.200.89",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bcab5423b784d2ae",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0229d0a16e98a2a49",
            "tags": {
              "Name": "WEB"
            },
            "tags_all": {
              "Name": "WEB"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0282612130a7f722b",
              "sg-067d251635c7f8c23"
            ]
          },
          "dependencies": [
            "aws_network_interface.web_nic",
            "aws_security_group.ssh_sg",
            "aws_security_group.subnet_sg",
            "aws_subnet.app_subnet",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "app_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:929679443283:internet-gateway/igw-01cb103c2a7af4f27",
            "id": "igw-01cb103c2a7af4f27",
            "owner_id": "929679443283",
            "vpc_id": "vpc-0177c8d39526e9a89"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "db_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:929679443283:network-interface/eni-08eaced05d28435bd",
            "attachment": [
              {
                "attachment_id": "eni-attach-091338c1f18e7751f",
                "device_index": 0,
                "instance": "i-0dd345e15b4919e0d"
              }
            ],
            "id": "eni-08eaced05d28435bd",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:fc:3f:b6:38:13",
            "owner_id": "929679443283",
            "private_ip": "192.168.0.13",
            "private_ip_list": [
              "192.168.0.13"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "192.168.0.13"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0282612130a7f722b",
              "sg-067d251635c7f8c23"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0229d0a16e98a2a49"
          },
          "dependencies": [
            "aws_security_group.ssh_sg",
            "aws_security_group.subnet_sg",
            "aws_subnet.app_subnet",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "lb_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:929679443283:network-interface/eni-0650b51db9f787eb5",
            "attachment": [
              {
                "attachment_id": "eni-attach-0717b04f4ce01967f",
                "device_index": 0,
                "instance": "i-00213ad9dca971cc0"
              }
            ],
            "id": "eni-0650b51db9f787eb5",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:87:a1:17:fc:31",
            "owner_id": "929679443283",
            "private_ip": "192.168.0.11",
            "private_ip_list": [
              "192.168.0.11"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "192.168.0.11"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0282612130a7f722b",
              "sg-0630f4ff6e8e89d93",
              "sg-067d251635c7f8c23"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0229d0a16e98a2a49"
          },
          "dependencies": [
            "aws_security_group.http_sg",
            "aws_security_group.ssh_sg",
            "aws_security_group.subnet_sg",
            "aws_subnet.app_subnet",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "web_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:929679443283:network-interface/eni-0a2a0a9f3b9165ada",
            "attachment": [
              {
                "attachment_id": "eni-attach-0bda0298eda759269",
                "device_index": 0,
                "instance": "i-0db9da40394fe1d4d"
              }
            ],
            "id": "eni-0a2a0a9f3b9165ada",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:5f:85:a1:f6:8d",
            "owner_id": "929679443283",
            "private_ip": "192.168.0.12",
            "private_ip_list": [
              "192.168.0.12"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "192.168.0.12"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0282612130a7f722b",
              "sg-067d251635c7f8c23"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0229d0a16e98a2a49"
          },
          "dependencies": [
            "aws_security_group.ssh_sg",
            "aws_security_group.subnet_sg",
            "aws_subnet.app_subnet",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "app_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:929679443283:route-table/rtb-0d72f1d191daff2bc",
            "id": "rtb-0d72f1d191daff2bc",
            "owner_id": "929679443283",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01cb103c2a7af4f27",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0177c8d39526e9a89"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.app_igw",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_app_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03f1c3d187267e530",
            "route_table_id": "rtb-0d72f1d191daff2bc",
            "subnet_id": "subnet-0229d0a16e98a2a49"
          },
          "dependencies": [
            "aws_internet_gateway.app_igw",
            "aws_route_table.app_rt",
            "aws_subnet.app_subnet",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "http_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:929679443283:security-group/sg-0630f4ff6e8e89d93",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0630f4ff6e8e89d93",
            "ingress": [
              {
                "cidr_blocks": [
                  "68.201.253.153/32"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "app_sg20230330195107756600000002",
            "name_prefix": "app_sg",
            "owner_id": "929679443283",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0177c8d39526e9a89"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:929679443283:security-group/sg-067d251635c7f8c23",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-067d251635c7f8c23",
            "ingress": [
              {
                "cidr_blocks": [
                  "68.201.253.153/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ssh_sg20230330195107756500000001",
            "name_prefix": "ssh_sg",
            "owner_id": "929679443283",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0177c8d39526e9a89"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "subnet_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:929679443283:security-group/sg-0282612130a7f722b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0282612130a7f722b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "192.168.0.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "subnet-sg20230330195107757600000003",
            "name_prefix": "subnet-sg",
            "owner_id": "929679443283",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0177c8d39526e9a89"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:929679443283:subnet/subnet-0229d0a16e98a2a49",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "192.168.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0229d0a16e98a2a49",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "929679443283",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app_subnet"
            },
            "tags_all": {
              "Name": "app_subnet"
            },
            "vpc_id": "vpc-0177c8d39526e9a89"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "app_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:929679443283:vpc/vpc-0177c8d39526e9a89",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/24",
            "default_network_acl_id": "acl-0eebabc20dbf8b527",
            "default_route_table_id": "rtb-09439885ba14ab1e0",
            "default_security_group_id": "sg-0f85fba6e17dd6a0e",
            "dhcp_options_id": "dopt-0fb21e066ca47d2b2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0177c8d39526e9a89",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09439885ba14ab1e0",
            "owner_id": "929679443283",
            "tags": {
              "Name": "app_vpc"
            },
            "tags_all": {
              "Name": "app_vpc"
            }
          }
        }
      ]
    }
  ]
}